# jibun_ikusei

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
lily_desktop/: 202603_speaker_profile.pt  README.md  TODO.md  config.yaml  enroll_speaker.py  main.py  pyproject.toml  record_voice.py  setup_healthplanet.py  speaker_profile.pt  start.bat
lily_desktop/TODO/: TODO_event_driven_job_refactor.md
lily_desktop/ai/: action_log_context.py  annict_client.py  auto_conversation.py  camera_analyzer.py  chat_engine.py  openai_client.py  provider_chat.py  rakuten_books_client.py  screen_analyzer.py  system_prompts.py  talk_seed.py  tool_definitions.py  tool_executor.py  wikimedia_client.py
lily_desktop/api/: api_client.py  auth.py
lily_desktop/core/: action_log_organizer.py  action_log_summary_backfill_service.py  active_window.py  activity_capture_service.py  background_event_runtime.py  browser_processes.py  camera.py  chrome_audible_tabs.py  config.py  constants.py  desktop_activity_summary.py  desktop_context.py  domain_events.py  event_bus.py  job_manager.py  level_watch.py  local_http_bridge.py  runtime_logging.py  situation_capture.py  situation_logger.py  skill_resolution.py  youtube_transcript_saver.py
lily_desktop/data/: session_manager.py
lily_desktop/fitbit/: fitbit_client.py  fitbit_summarizer.py  fitbit_sync.py
lily_desktop/health/: healthplanet_client.py  oauth_dialog.py  sync_policy.py
lily_desktop/pose/: haruka_pose_map.json  lily_pose_map.json  (+2 more)
(+342 files in other folders)
