[project]
name = "lily-desktop"
version = "0.1.0"
description = "リリィデスクトップマスコット for Windows"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=1.26.0,<2.0.0",
    "openai>=2.30.0",
    "pillow>=12.1.1",
    "pyside6>=6.11.0",
    "pyyaml>=6.0.3",
    "qasync>=0.28.0",
    "sounddevice>=0.5.0",
    "huggingface-hub>=0.15.0,<0.21.0",
    "soundfile>=0.12.0",
    "speechbrain>=1.0.0",
    "torch>=2.1.0,<2.2.0",
    "torchaudio>=2.1.0,<2.2.0",
    "warrant-lite>=1.0.4",
    "webrtcvad-wheels>=2.0.14",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
